Changed the font and format of the other pages a little bit. I just can't see how a mono-space codelike font is going to go well with this website. Changed the name of underTitle to a more appropriately named navBar. Increased the letter spacing in title to better fill the area around it because I assumed the reason you used a different font was because the current one was too small. Also fixed some issues in member.css that made it behind the css in the other sites such as not having the animation during hovering.

--- a/pages/blog/blog.css
+++ b/pages/blog/blog.css
@@ -60,16 +60,16 @@ body {
 }
 
 #title {
-  letter-spacing: 0.1rem;
   font-family: "Barlow Condensed", sans-serif;
   font-size: 3em;
   text-align: left;
-  padding-left: 20%;
   line-height: 1;
   color: #056600;
   font-weight: normal;
   display: flex;
   flex-flow: row no-wrap;
+  justify-content: center;
+  letter-spacing: 0.2em;
 }
 
 #title a {
@@ -88,7 +88,7 @@ body {
   color: inherit;
 }
 
-#underTitle {
+#navBar {
   width: 100%;
   background-color: #056600;
   color: white;
@@ -97,7 +97,7 @@ body {
   justify-content: center;
 }
 
-#underTitle a {
+#navBar a {
   text-decoration: none;
   color: inherit;
   padding-left: 3%;
@@ -105,11 +105,11 @@ body {
   transition: 300ms;
 }
 
-#underTitle a:link a:visited {
+#navBar a:link a:visited {
   color: inherit;
 }
 
-#underTitle a:hover {
+#navBar a:hover {
   color: black;
   background-color: #F5F5F5;
 }
@@ -119,7 +119,7 @@ body {
   flex-direction: row;
   font-size: 1.3em;
   overflow: hidden;
-  background-color: rgba(149, 163, 179, 0.3);
+  background-color: rgba(149, 163, 179, 0.2);
 }
 
 #blog {
