--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 #title a:visited {
   color: inherit;
 }
-#navBar {
+#underTitle {
   width: 100%;
   background-color: var(--kellyGreen);
   color: white;
@@ -84,17 +84,17 @@ body {
   font-family: var(--mainFont);
   font-weight: 400;
 }
-#navBar a {
+#underTitle a {
   text-decoration: none;
   color: inherit;
   padding-left: 3%;
   padding-right: 3%;
   transition: 300ms;
 }
-#navBar a:link a:visited {
+#underTitle a:link a:visited {
   color: inherit;
 }
-#navBar a:hover {
+#underTitle a:hover {
   color: black;
   background-color: var(--offWhite);
 }
@@ -203,8 +203,6 @@ body {
   margin: 2%;
   margin-bottom: 10%;
 }
-#contentText ul {
-  list-style: url("assets/html.png"); 
 @keyframes fade {
   0% {
     opacity: 0.4;
@@ -248,4 +246,4 @@ button.toggleThemeButton {
   position: sticky;
   border-radius: 10%;
   /* style */
-]
+}
